--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
             }
             else if (type === 'text') {
                 // Generate points from Canvas Text
-                const textPoints = generateTextPoints("I LOVE YOU");
+                const textPoints = generateTextPoints("I LOVE YOU PONDATTI");
                 for (let i = 0; i < PARTICLE_COUNT; i++) {
                     // Cycle through text points, reusing if we have more particles than text pixels
                     const p = textPoints[i % textPoints.length];
@@ -505,4 +505,5 @@
 
     </script>
 </body>
+
 </html>
